renaming initialization of menubutton to avoid overlapping with its generic name

--- a/css/OSB.css
+++ b/css/OSB.css
@@ -13,3 +13,15 @@
     text-align: center;
     border-radius:0;
 }
+
+.controlsMenuButton {
+	position: fixed;
+	top: 5px;
+	right: 390px;
+	height: 28px
+}
+
+.controlsMenuButton:disabled {
+	background: 0;
+	color: @orange;
+}
